[package]
name = "pangocairo"
version = "0.1.3"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/razrfalcon/pangocairo-rs"
license = "MIT"
keywords = ["cairo", "pango"]

[dependencies]
glib = "^0.1.3"
pango = "^0.1.3"
pango-sys = "^0.3.4"
cairo-rs = "^0.1.3"
pangocairo-sys = "^0.3.4"

[dev-dependencies]
gtk = "^0.1.3"
