[package]
name = "pangocairo-sys"
version = "0.3.4"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/razrfalcon/pangocairo-rs"
license = "MIT"
keywords = ["cairo", "pango", "ffi"]
build = "build.rs"

[lib]
name = "pangocairo_sys"

[dependencies]
libc = "=0.2.20"
glib-sys = "^0.3.4"
cairo-sys-rs = "^0.3.4"
pango-sys = "^0.3.4"

[build-dependencies]
pkg-config = "0.3.9"
