[package]
name = "pangocairo-sys"
version = "0.1.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/razrfalcon/pangocairo-rs"
license = "MIT"
keywords = ["cairo", "pango", "ffi"]
build = "build.rs"

[lib]
name = "pangocairo_sys"

[dependencies]
libc = "=0.2.20"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.3.4"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.4"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.4"

[build-dependencies]
pkg-config = "0.3.9"
